--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
     implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
+    implementation 'com.android.volley:volley:1.2.1'
+
 
 
 }
